chore: Add accessibility labels to action button and status icon button

--- a/index.html
+++ b/index.html
@@ -2,9 +2,42 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta
+      name="description"
+      content="Todo Management Application - A comprehensive solution for efficiently managing tasks and subtasks with features like create, update, delete, comment management, priority setting, status management, user assignment, and more."
+    />
+    <meta
+      name="keywords"
+      content="Todo Management, Task Management, Sub-Tasks, Project Management, Task Organization, Team Collaboration, Task Delegation, Productivity App, Due Dates, Task Priority"
+    />
+    <meta name="author" content="Dipta Sikder" />
+    <meta property="og:title" content="Todo Management Application" />
+    <meta
+      property="og:description"
+      content="A comprehensive solution for efficiently managing tasks and subtasks."
+    />
+    <meta property="og:url" content="https://clickup-todo.vercel.app/" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="/todo-app.png"
+    />
+    <meta property="og:site_name" content="Todo Management Application" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Todo Management Application" />
+    <meta
+      name="twitter:description"
+      content="A comprehensive solution for efficiently managing tasks and subtasks."
+    />
+    <meta
+      name="twitter:image"
+      content="/todo-app.png"
+    />
+    <meta name="twitter:site" content="@yourtwitterhandle" />
+    <meta name="twitter:creator" content="@yourtwitterhandle" />
+    <title>Todo Management Application</title>
+    <link rel="canonical" href="https://clickup-todo.vercel.app/" />
   </head>
   <body>
     <div id="root"></div>
